--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,8 @@ body {
 
 #video {
     position: absolute;
-    width: 100%;
-    height: auto;
+    width: 90vw;
+    height: 90vh;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
